# pmr

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
models/: cuboid_30.pcd  cup.blend  cup_45.pcd
src/common/: mesh.h~  model_stl.cpp  model_stl.h
src/conversion/: stl2pcd.cpp  stl2pcd.h
src/examples/: icfMethodTest.cpp  icfMethodTest.cpp~  main.cpp~  pointMethodTest.cpp
src/filter/: stl_downSampler.cpp  stl_downSampler.h
src/io/: stl_reader.cpp  stl_reader.cpp~  stl_reader.h
src/math/: evaluate_fitness_func.cpp  evaluate_fitness_func.h  particle.cpp  particle.h  pose.cpp  pose.h  swarm.cpp  swarm.h  transform.cpp  transform.h
src/registration/icf/: distance_measurer.cpp  distance_measurer.h  evaluate_fitness_func.cpp~  evaluate_fitness_func.h~  icf.cpp  icf.cpp~  icf.h  icf_pso.cpp  icf_pso.h  min_dist_func.cpp  min_dist_func.h
src/registration/mcn/: mcn.cpp  mcn.h
src/visualization/: stl_visualizer.cpp  stl_visualizer.h
tools/: CMakeLists.txt  cloud_transform.cpp  pcd_viz.cpp
tools/app/: pcd_gen  pcd_viz  stl_viz
tools/app/TestData/: cuboid.stl  cuboid_filtered.pcd  cup.stl  cup_12341.pcd  cup_filtered.pcd  platonic_solids.blend
tools/cloud_transform/src/: cloud_transform.cpp~
tools/pcd_gen/: CMakeLists.txt  CMakeLists.txt~
tools/pcd_gen/src/: pcd_generator.cpp
tools/pcd_viz/: CMakeLists.txt  CMakeLists.txt~
tools/stl_viz/: CMakeLists.txt
tools/stl_viz/src/: stl_viz.cpp
tools/testdata/: cuboid_std.pcd  cup_trans.pcd
